--- a/application/views/scripts/community/profile.phtml
+++ b/application/views/scripts/community/profile.phtml
@@ -1,10 +1,10 @@
 <div id="profile">
 
-	<?php //var_dump($this->user); ?><br />
-	<?php //var_dump($this->profile); ?>
+	<?php var_dump($this->user); ?><br />
+	<?php var_dump($this->profile); ?>
 	<br />
 	<br />
-	<h1 align="center"><?php echo $this->user['username'] ?>' Profil</h1>
+	<h1><?php echo $this->user['username'] ?>' Profil</h1>
 	<br />
 	<br />
 	<br />
