--- a/application/views/scripts/community/showmessages.phtml
+++ b/application/views/scripts/community/showmessages.phtml
@@ -1,18 +1,36 @@
-<?php if (!empty($this->messages)): ?>
-    <?php foreach($this->messages as $message): ?>
-		<?php echo $message['date']; ?><br />
-		<?php echo $message['fullname']; ?><br />
-		<?php echo $message['subject']; ?><br />
-		<?php echo $message['message']; ?>
-		<a href="
-		<?php echo $this->baseUrl 
-					. '/community/message/to/'
-					. $message['from']['userid']; ?>">
-		Antworten</a>
-		<hr />
-    <?php endforeach; ?>
-<?php endif; ?>
+<div id="showmessage">
+	<h1>Meine privaten Nachrichten</h1>
+	<br />
+	<br />
+	<?php if (!empty($this->messages)): ?>
+		<?php foreach($this->messages as $message): ?>
+			<table>
+				<tr>
+					<th><?php echo $message['fullname']; ?></th>
+					<th align="right"><?php echo $message['subject']; ?></th>
+				</tr>
+				<tr>
+					<td id="date"><?php echo $message['date']; ?></td>
+				</tr>
+				<tr>
+					<td><?php echo $message['message']; ?></td>
+				</tr>
+			</table>
+			<h3><a href="<?php echo $this->baseUrl . '/community/message/to/' . $message['from']['userid']; ?>">Antworten</a></h3>
+			<br />
+			<br />
+		<?php endforeach; ?>
+	<?php else: ?>
+		<h3>Keine Nachrichten vorhanden</h3>
+	<?php endif; ?>
 
 
-<a href="<?php echo $this->baseUrl . '/user/profile'; ?>">Zurück zum Profil</a>
 
+
+	<br />
+	<br />
+
+
+	<a href="<?php echo $this->baseUrl . '/user/profile'; ?>">Zurück zum Profil</a>
+
+</div>
