--- a/application/views/scripts/user/editaddress.phtml
+++ b/application/views/scripts/user/editaddress.phtml
@@ -6,9 +6,7 @@
 <script type="text/javascript" src="/js/editaddress.js"></script>
 
 
-<br />
-<br />
-<h1 align="center">Adressdaten bearbeiten</h1>
+<h1>Adressdaten bearbeiten</h1>
 <br />
 
 
