--- a/application/views/scripts/user/profile.phtml
+++ b/application/views/scripts/user/profile.phtml
@@ -1,8 +1,5 @@
 <div id="profile">
-	<br />
-	<br />
-	<h1 align="center">Mein Profil</h1>
-	<br />
+	<h1>Mein Profil</h1>
 	<br />
 	<br />
 	<div id="messages">
