--- a/application/views/scripts/community/index.phtml
+++ b/application/views/scripts/community/index.phtml
@@ -1,7 +1,7 @@
 <div id="profile">
 	<br />
 	<br />
-	<h1 align="center">Die Zoo Community</h1>
+	<h1>Die Zoo Community</h1>
 	<br />
 	<br />
 	<br />
@@ -23,15 +23,15 @@
 			</tr>
 			<tr>
 				<td>Vorname</td>
-				<td><?php echo $this->baseUrl.$userData['user']['firstname']; ?></td>
+				<td><?php echo $userData['user']['firstname']; ?></td>
 			</tr>
 			<tr>
 				<td>Nachname</td>
-				<td><?php echo $this->baseUrl.$userData['user']['lastname']; ?></td>
+				<td><?php echo $userData['user']['lastname']; ?></td>
 			</tr>
 			<tr>
 				<td>E-Mail</td>
-				<td><?php echo $this->baseUrl.$userData['user']['mail']; ?></td>
+				<td><?php echo baseUrl.$userData['user']['mail']; ?></td>
 			</tr>
 			<tr>
 				<td><a href="<?php echo $this->baseUrl. '/community/profile/user/'. $userData['user']['userid']; ?>"><?php echo 'Profil anschauen'; ?></a></td>
