--- a/application/views/scripts/user/changepassword.phtml
+++ b/application/views/scripts/user/changepassword.phtml
@@ -2,9 +2,7 @@
 <script type="text/javascript" src="/js/3rdParty/jquery.validate.js"></script>
 <script type="text/javascript" src="/js/register.js"></script>
 
-<br />
-<br />
-<h1 align="center">Passwort ändern</h1>
+<h1>Passwort ändern</h1>
 <br />
 <br />
 <br />
