--- a/public/css/blue.css
+++ b/public/css/blue.css
@@ -11,8 +11,29 @@
 #header {
 	width: 900px;
 	height: 150px;
-	background-color: #3d301d;
+	background: #3d301d url(/img/header.jpg);
 }
+
+#header td.theme-green {
+	background:#008800;
+	width:50px;
+	height:20px;
+	border:2px solid #000000;
+}
+
+#header td.theme-blue {
+	background:#000088;
+	width:50px;
+	height:20px;
+	border:2px solid #000000;
+}
+
+#header a {
+	display:block;
+	width:100%;
+	height:100%;
+}
+
 
 #login {
 	width: 900px;
@@ -47,8 +68,8 @@
 
 #login a:hover {
 	font-weight:bold;
-	color:#003900;
-	background:#E4FDC7;
+	color:#000099;
+	background:#b1c1fd;
 	padding:10px 25px 10px 25px;
 }
 
@@ -57,7 +78,7 @@
 	float: left;
 	width: 200px;
 	height: 1000px;
-	background-color: blue;
+	background-color: #ced2ed;
 	border-right: 1px solid #003900;
 }
 
@@ -68,7 +89,7 @@
 
 #navi h3 {
 	width:140px;
-	background:#F5FED8;
+	background:#b1c1fd;
 	font-size:20px;
 	padding-left:20px;
 	margin-bottom:0px;
@@ -78,17 +99,17 @@
 
 #navi a {
 	display:block;
+	color:#000000;
 	width:185px;
-	color:#003900;
-	background:#C2DBA5;
+	background:#ced2ed;
 	text-decoration:none;
 	padding:4px 0 0 15px;
 	font-weight:bold;
 }
 
 #navi a:hover {
-	color:#336C33;
-	background-color:#F5FED8;	
+	color:#000088;
+	background-color:#90a0dc;	
 }
 
 #content {
@@ -120,7 +141,7 @@ a {
 }
 
 a:hover {
-	color:#447C44;
+	color:#000099;
 	text-decoration:none;
 }
 
@@ -140,12 +161,12 @@ h3 {
 #profile table {
 	border:0px;
 	width:670px;
-	background:#eff9e5;
+	background:#ced2ed;
 	text-align:left;
 }
 
 #profile h3 {
-	background:#C2DBA5;
+	background:#B1C1FD;
 	width:665px;
 	margin:0px;
 	padding-left:5px;
@@ -157,12 +178,17 @@ h3 {
 
 #profile a {
 	font-weight:bold;
-	background-color:#C2DBA5;
+	background-color:#B1C1FD;
+	color:#000000;
+}
+
+#profile a:hover {
+	color:#000099;
 }
 
 #messages a {
 	font-weight:normal;
-	background-color:#eff9e5;
+	background-color:#CED2ED;
 }
 
 #normlinks a {
@@ -185,7 +211,7 @@ h3 {
 #tablelink a, img {
 	text-decoration:none;
 	border:0px;
-	background:#eff9e5;
+	background:#CED2ED;
 }
 
 .error  {
